# SA

./: README.md
lesson-2/: lesson-2.md
lesson-2/substrate-node-template/: build.sh
lesson-2/substrate-node-template/node/: Cargo.toml
lesson-2/substrate-node-template/pallets/kitties/src/: lib.rs  mock.rs  tests.rs
lesson-2/substrate-node-template/runtime/: Cargo.toml
lesson-2/substrate-node-template/runtime/src/: lib.rs
lesson-3/: README.md
lesson-3/frontend/.yarn/: build-state.yml
lesson-3/frontend/src/: Kitties.js
lesson-3/frontend/src/config/: development.json  types.json
lesson-3/substrate-node-template/node/src/: service.rs
lesson-3/substrate-node-template/pallets/kitties/: Cargo.toml
lesson-3/substrate-node-template/pallets/kitties/src/: lib.rs  mock.rs  tests.rs
lesson-3/substrate-node-template/pallets/template/: Cargo.toml
lesson-3/substrate-node-template/runtime/src/: lib.rs
lesson-4/: README.md
lesson-4/ocw-example/pallets/ocw/src/: lib.rs
lesson-5/: README.md  erc20.contract
lesson-5/erc20/: lib.rs
lesson-6/: README.md  localTestSpec.json  localTestSpecRaw.json
lesson-6/substrate-node-template/pallets/template/src/: lib.rs
