[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0-monthly-2021-08'
build = 'build.rs'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'node-template'
[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", path = "../../substrate/utils/build-script-utils" }

[dependencies.node-template-runtime]
path = '../runtime'
version = '3.0.0-monthly-2021-08'

[dependencies]
prost-derive = '0.8.0'
jsonrpc-core = '18.0.0'
structopt = '0.3.8'
frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/benchmarking" }
frame-benchmarking-cli = { version = "4.0.0-dev", default-features = false, path = "../../substrate/utils/frame/benchmarking-cli" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/transaction-payment/rpc/" }
sc-basic-authorship = { version = "0.10.0-dev", path = "../../substrate/client/basic-authorship" }
sc-cli = { version = "0.10.0-dev", path = "../../substrate/client/cli" }
sc-client-api = { version = "4.0.0-dev", path = "../../substrate/client/api" }
sc-consensus = { version = "0.10.0-dev", path = "../../substrate/client/consensus/common" }
sc-consensus-aura = { version = "0.10.0-dev", path = "../../substrate/client/consensus/aura" }
sc-executor = { version = "0.10.0-dev", path = "../../substrate/client/executor", features = ["wasmtime"] }
sc-finality-grandpa = { version = "0.10.0-dev", path = "../../substrate/client/finality-grandpa" }
sc-keystore = { version = "4.0.0-dev", path = "../../substrate/client/keystore" }
sc-rpc = { version = "4.0.0-dev", path = "../../substrate/client/rpc" }
sc-rpc-api = { version = "0.10.0-dev", path = "../../substrate/client/rpc-api" }
sc-service = { version = "0.10.0-dev", path = "../../substrate/client/service", features = ["wasmtime"] }
sc-telemetry = { version = "4.0.0-dev", path = "../../substrate/client/telemetry" }
sc-transaction-pool = { version = "4.0.0-dev", path = "../../substrate/client/transaction-pool" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../../substrate/client/transaction-pool/api" }
sp-api = { version = "4.0.0-dev", path = "../../substrate/primitives/api" }
sp-block-builder = { version = "4.0.0-dev", path = "../../substrate/primitives/block-builder" }
sp-blockchain = { version = "4.0.0-dev", path = "../../substrate/primitives/blockchain" }
sp-consensus = { version = "0.10.0-dev", path = "../../substrate/primitives/consensus/common" }
sp-consensus-aura = { version = "0.10.0-dev", path = "../../substrate/primitives/consensus/aura" }
sp-core = { version = "4.0.0-dev", path = "../../substrate/primitives/core" }
sp-finality-grandpa = { version = "4.0.0-dev", path = "../../substrate/primitives/finality-grandpa" }
sp-inherents = { version = "4.0.0-dev", path = "../../substrate/primitives/inherents" }
sp-runtime = { version = "4.0.0-dev", path = "../../substrate/primitives/runtime" }
sp-timestamp = { version = "4.0.0-dev", path = "../../substrate/primitives/timestamp" }
substrate-frame-rpc-system = { version = "4.0.0-dev", path = "../../substrate/utils/frame/rpc/system" }


[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
