[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'Substrate FRAME based template for composing and building WASM runtimes.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0-monthly-2021-08'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.pallet-template]
default-features = false
path = '../pallets/template'
version = '3.0.0-monthly-2021-08'

[dependencies.pallet-kitties]
default-features = false
path = '../pallets/kitties'
version = '3.0.0-monthly-2021-08'

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", path = "../../substrate/utils/wasm-builder" }

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/benchmarking", optional = true }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/system" }
frame-executive = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/executive" }
frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/system/benchmarking", optional = true }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/system/rpc/runtime-api/" }
hex-literal = { version = "0.3.1", optional = true }
pallet-aura = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/aura" }
pallet-balances = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/balances" }
pallet-grandpa = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/grandpa" }
pallet-sudo = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/sudo" }
pallet-randomness-collective-flip = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/randomness-collective-flip" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/timestamp" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/transaction-payment" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/transaction-payment/rpc/runtime-api/" }
sp-api = { version = "4.0.0-dev", default-features = false, path = "../../substrate/primitives/api" }
sp-block-builder = { path = "../../substrate/primitives/block-builder", default-features = false, version = "4.0.0-dev"}
sp-consensus-aura = { version = "0.10.0-dev", default-features = false, path = "../../substrate/primitives/consensus/aura" }
sp-core = { version = "4.0.0-dev", default-features = false, path = "../../substrate/primitives/core" }
sp-inherents = { path = "../../substrate/primitives/inherents", default-features = false, version = "4.0.0-dev"}
sp-offchain = { version = "4.0.0-dev", default-features = false, path = "../../substrate/primitives/offchain" }
sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../substrate/primitives/runtime" }
sp-session = { version = "4.0.0-dev", default-features = false, path = "../../substrate/primitives/session" }
sp-std = { version = "4.0.0-dev", default-features = false, path = "../../substrate/primitives/std" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, path = "../../substrate/primitives/transaction-pool" }
sp-version = { version = "4.0.0-dev", default-features = false, path = "../../substrate/primitives/version" }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-template/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-template/std',
    'pallet-kitties/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
